Update component versions including Spring boot to latest Add ci.yaml Fix various minor issues found by code inspection
Signed-off-by: Paul-Erik Törrönen <poltsi@poltsi.fi>